Forgot to actually make an executable

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Test
       run: cargo test --verbose
     - name: Build
-      run: cargo build
+      run: cargo build --release
     - name: Upload
       uses: actions/upload-artifact@v3.1.0
       with:
@@ -35,7 +35,7 @@ jobs:
     - name: Test
       run: cargo test --verbose
     - name: Build
-      run: cargo build
+      run: cargo build --release
     - name: Upload
       uses: actions/upload-artifact@v3.1.0
       with:
@@ -51,7 +51,7 @@ jobs:
     - name: Test
       run: cargo test --verbose
     - name: Build
-      run: cargo build
+      run: cargo build --release
     - name: Upload
       uses: actions/upload-artifact@v3.1.0
       with:
