Shut up Windows, no one likes you

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/upload-artifact@v3.1.0
       with:
         name: stacker-windows
-        path: target/release/stacker
+        path: target/release/stacker.exe
 
   build-mac:
 
