--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -65,7 +65,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Setup
-      run: rustup target add aarch64-apple-darwin \ xcodebuild -showsdks \ SDKROOT=$(xcrun -sdk macosx11.1 --show-sdk-path) \ MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx11.1 --show-sdk-platform-version)
+      run: rustup target add aarch64-apple-darwin
     - name: Test
       run: cargo test --verbose
     - name: Build
