--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -74,4 +74,4 @@ jobs:
       uses: actions/upload-artifact@v3.1.0
       with:
         name: stacker-mac-arm
-        path: target/release/stacker
+        path: target/release
